# skills-for-fabric-load-medicare-data

./: .gitignore  README.md  deploy-medicare-e2e.sh  deploy-medicare-to-workspace.sh  pyproject.toml
config/: variables.md
context/: buildfabricworkspace.md  timeittakes.md  updateDefinitionNotebookEndpoint.md
data/DemoZippedFiles/: putfileshere.txt
docs/: LoadMedicareData.md  buildfabricworkspace.md
notebooks/: LoadMedicarePartDfiles.ipynb  TestEnvNotebook.ipynb  UnzipMedicareFiles.ipynb
