[project]
name = "skills-for-fabric-load-medicare-data"
version = "1.0.0"
description = "End-to-end deployment of Medicare Part D data into Microsoft Fabric"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/DataSnowman/skills-for-fabric-load-medicare-data"
